plugins {
    id 'java'
    id 'jacoco'
    id 'io.franzbecker.gradle-lombok'
    id 'com.adarshr.test-logger'
}

apply from: file("${rootDir}/dependencies.gradle")
dependencies {
    implementation(deps.guava)
    implementation(deps.owlapi)
    implementation(deps.slf4j_api)
    implementation(deps.slf4j_simple)
    implementation(deps.vavr)
    implementation(deps.commons_text)

    // Override transitive dependency versions due to vulns
    implementation(deps.jackson_databind)
    implementation(deps.rdf4j_util)
    implementation(deps.rdf4j_rio_rdfxml)
    implementation(deps.rdf4j_rio_trix)
    implementation(deps.httpclient)
    implementation(deps.commons_codec)

    // Test
    testImplementation(deps.junit_jupiter_api)
    testImplementation(deps.assertj)
    testRuntimeOnly(deps.junit_jupiter_engine)
}

compileJava {
    options.compilerArgs += ["--enable-preview", "-Xlint:preview" ]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview", "-Xlint:preview" ]
    sourceCompatibility = 13
    targetCompatibility = 13
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
    maxHeapSize = '1G'
    ignoreFailures = false
    failFast = true

    filter {
        includeTestsMatching "*Test"
    }
}

